# DGTW-code-base

./: .gitignore  README.md  environment.yml  pyproject.toml
configs/: base.yaml
configs/dataset/: cifar10.yaml  imagenet64.yaml
configs/eval/: baseline.yaml  map_branch.yaml
configs/experiment/: fm_cifar10_map_branch.yaml  fm_cifar10_map_branch_quick.yaml  fm_cifar10_map_branch_s1_e1_ctm_current.yaml  fm_cifar10_map_branch_s1_e1_ctm_ema.yaml  fm_cifar10_map_branch_s1_e1_ctm_teacher.yaml  fm_cifar10_map_branch_s1_e1_traj_reg.yaml  fm_cifar10_map_branch_s1_e2_defect_probe.yaml  fm_cifar10_map_branch_s1_e3_pred_direct.yaml  fm_cifar10_map_branch_s1_e3_pred_residual.yaml  fm_cifar10_map_branch_s1_e4_aux_endpoint_on.yaml  fm_cifar10_map_branch_s1_e5_warp_data_dense.yaml  fm_cifar10_map_branch_s1_e5_warp_identity.yaml  fm_cifar10_map_branch_s1_e5_warp_learned.yaml  fm_cifar10_map_branch_s1_e5_warp_source_dense.yaml  fm_cifar10_map_branch_s1_e5_warp_spline.yaml  fm_cifar10_map_branch_s1_e6_budget_full.yaml  fm_cifar10_map_branch_s1_e6_budget_quick.yaml  fm_cifar10_map_branch_s1_smoke_base.yaml  fm_cifar10_map_branch_s2_defect_eval.yaml  fm_cifar10_map_branch_s2_official_metrics.yaml  fm_imagenet64_baseline_smoke.yaml
configs/loss/: map_ctm_like.yaml
configs/model/: map_unet.yaml  unet_fm.yaml
configs/path/: condot.yaml  ot.yaml
configs/scheduler/: condot.yaml  (+2 more)
docs/: README.md
scripts/: build_dataset.py  prepare_imagenet64.py  run_eval.py  run_evaluate_defect.py  run_evaluate_metrics.py  run_export_samples_npz.py  run_multistep_panel.py  run_train.py
(+57 files in other folders)
