[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dgfm-map-branch-public"
version = "0.1.0"
description = "Public minimal release for dgfm explicit-map experiments"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "PyYAML>=6.0",
  "numpy>=2.0",
  "scipy>=1.15",
  "torch>=2.1",
  "torchvision>=0.16",
  "torch-fidelity>=0.4.0",
  "pillow",
  "matplotlib",
]

[project.optional-dependencies]
teacher = [
  "diffusers>=0.30",
  "transformers>=4.40",
  "accelerate>=0.30",
  "safetensors>=0.4",
  "piq>=0.8",
]
dev = [
  "pytest>=8.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
